Name:             Logic
Version:          0.23
License:          BSD3
Author:           SeeReason Partners <partners@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Synopsis:         Library for unifying various treatments of first order logic
Description:      Library for unifying various treatments of propositional (zeroth order)
                  and predicate (first order) logic.  Includes polymorphic functions to
                  convert between different instances, for doing variable substitution and
                  free variable gathering, and for conversion to various normal forms.
Build-Type:       Custom
Category:         Math
Cabal-version:    >= 1.2

Library
 GHC-options: -threaded -Wall -Werror -O2
 Exposed-Modules:  Logic.FirstOrder
                   Logic.Harrison.FOL
                   Logic.Harrison.Herbrand
                   Logic.Harrison.Lib
                   Logic.Harrison.Prop
                   Logic.Harrison.Skolem
                   Logic.Instances.Chiou
                   Logic.Instances.Native
                   Logic.Instances.PropLogic
                   Logic.Instances.SatSolver
                   Logic.Instances.TPTP
                   Logic.KnowledgeBase
                   Logic.Logic
                   Logic.Monad
                   Logic.Normal
                   Logic.NormalForm
                   Logic.Propositional
                   Logic.Resolution
                   Logic.Satisfiable
                   Logic.Set
 Build-Depends:    base, containers, fgl, happstack-data, happstack-state, incremental-sat-solver,
                   mtl, syb-with-class, text, logic-TPTP, PropLogic, pretty, syb

Executable tests
 Main-Is: Test/Test.hs
 Build-Depends:
  HUnit
