Name:             Logic
Version:          0.35
License:          BSD3
Author:           SeeReason Partners <partners@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Synopsis:         Library for unifying various treatments of first order logic
Description:      Library for unifying various treatments of propositional (zeroth order)
                  and predicate (first order) logic.  Includes polymorphic functions to
                  convert between different instances, for doing variable substitution and
                  free variable gathering, and for conversion to various normal forms.
Build-Type:       Custom
Category:         Math
Cabal-version:    >= 1.2

Library
 GHC-options: -threaded -Wall -Werror -O2
 Exposed-Modules:  Data.Logic
                   Data.Logic.FirstOrder
                   Data.Logic.Harrison.FOL
                   Data.Logic.Harrison.Herbrand
                   Data.Logic.Harrison.Lib
                   Data.Logic.Harrison.Prop
                   Data.Logic.Harrison.Skolem
                   Data.Logic.Instances.Chiou
                   Data.Logic.Instances.Native
                   Data.Logic.Instances.PropLogic
                   Data.Logic.Instances.Public
                   Data.Logic.Instances.SatSolver
                   Data.Logic.KnowledgeBase
                   Data.Logic.Logic
                   Data.Logic.Monad
                   Data.Logic.Normal
                   Data.Logic.NormalForm
                   Data.Logic.Predicate
                   Data.Logic.Pretty
                   Data.Logic.Propositional
                   Data.Logic.Resolution
                   Data.Logic.Satisfiable
                   Data.Logic.Set
 Build-Depends:    base, containers, fgl, happstack-data, incremental-sat-solver,
                   mtl, syb-with-class, text, PropLogic, pretty, safecopy, syb

Executable tests
 Main-Is: Test/Test.hs
 Build-Depends: HUnit
