Name:             Logic
Version:          0.38
License:          BSD3
Author:           David Fox <dsf@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Synopsis:         Symbolic logic support - a class framework, example instances, polymorphic implementations
Description:      Package to support Propositional and First Order Logic.  It includes classes
                  representing the different types of formulas and terms, some instances of
                  those classes for types used in other logic libraries, and implementations of
                  several logic algorithms, including conversion to normal form and a simple
                  resolution-based theorem prover for any type for which an instance of
                  FirstOrderFormula is provided.
Build-Type:       Custom
Category:         Math
Cabal-version:    >= 1.2

Library
 GHC-options: -threaded -Wall -Werror -O2
 Exposed-Modules:  Data.Logic
                   Data.Logic.FirstOrder
                   Data.Logic.Harrison.FOL
                   Data.Logic.Harrison.Herbrand
                   Data.Logic.Harrison.Lib
                   Data.Logic.Harrison.Prop
                   Data.Logic.Harrison.Skolem
                   Data.Logic.Instances.Chiou
                   Data.Logic.Instances.Native
                   Data.Logic.Instances.PropLogic
                   Data.Logic.Instances.Public
                   Data.Logic.Instances.SatSolver
                   Data.Logic.KnowledgeBase
                   Data.Logic.Logic
                   Data.Logic.Monad
                   Data.Logic.Normal
                   Data.Logic.NormalForm
                   Data.Logic.Predicate
                   Data.Logic.Pretty
                   Data.Logic.Propositional
                   Data.Logic.Resolution
                   Data.Logic.Satisfiable
                   Data.Logic.Set
                   Data.Logic.Test
 Build-Depends:    base, containers, fgl, happstack-data, incremental-sat-solver,
                   mtl, syb-with-class, text, PropLogic, pretty, safecopy, syb

Executable tests
 Main-Is: Test/Test.hs
 Build-Depends: HUnit
