Name:             logic-classes
Version:          1.7
Synopsis:         Framework for propositional and first order logic, theorem proving
Description:      Package to support Propositional and First Order Logic.  It includes classes
                  representing the different types of formulas and terms, some instances of
                  those classes for types used in other logic libraries, and implementations of
                  several logic algorithms, including conversion to normal form and a simple
                  resolution-based theorem prover for any instance of FirstOrderFormula.
Homepage:         https://github.com/seereason/logic-classes
License:          BSD3
License-File:     COPYING
Author:           David Fox <dsf@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Bug-Reports:      https://github.com/seereason/logic-classes/issues
Category:         Logic, Theorem Provers
Cabal-version:    >= 1.9
Build-Type:       Simple
Extra-Source-Files: changelog

flag local-atp-haskell
  Manual: True
  Default: False

Library
  GHC-options: -Wall -O2
  Exposed-Modules:
    Data.Logic
    Data.Logic.Classes.Atom
    Data.Logic.Classes.ClauseNormalForm
    Data.Logic.Harrison.Formulas.FirstOrder
    Data.Logic.Harrison.Formulas.Propositional
    Data.Logic.Instances.Chiou
    Data.Logic.Instances.PropLogic
    Data.Logic.Instances.SatSolver
    Data.Logic.Instances.Test
    -- Data.Logic.Instances.TPTP
    Data.Logic.KnowledgeBase
    Data.Logic.Normal.Clause
    Data.Logic.Normal.Implicative
    Data.Logic.Resolution
    Data.Logic.Satisfiable
    Data.Logic.Types.FirstOrder
    Data.Logic.Types.FirstOrderPublic
    Data.Boolean
    Data.Boolean.SatSolver
  Build-Depends:
    applicative-extras,
    base >= 4.3 && < 5,
    containers,
    HUnit,
    -- logic-TPTP,
    mtl,
    pretty >= 1.1.2,
    PropLogic,
    safe,
    safecopy,
    set-extra,
    syb,
    template-haskell
  if flag(local-atp-haskell)
    Hs-Source-Dirs: ., ../atp-haskell/src
    Exposed-Modules:
      ATP
      Lib
      Pretty
      Formulas
      Lit
      Prop
      PropExamples
      DefCNF
      DP
      FOL
      Skolem
      Herbrand
      Unif
      Tableaux
      Resolution
      Prolog
      Meson
      Equal
  else
    Build-Depends: atp-haskell

Test-Suite logic-classes-tests
  Type: exitcode-stdio-1.0
  GHC-Options: -Wall -O2
  Hs-Source-Dirs: Tests
  Main-Is: Main.hs
  Build-Depends: applicative-extras, base, containers, HUnit, logic-classes, mtl, pretty >= 1.1.2, PropLogic, safe, set-extra, syb
  if !flag(local-atp-haskell)
    Build-Depends: atp-haskell
